2020-08-31  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/leb128.pk (LEB128): Define.
	* pickles/dwarf.pk (Dwarf_Block): Define.
	(Dwarf_CFI): Options for DW_CFA_def_cfa_expression,
	DW_CFA_expression and DW_CFA_val_expression.
	(Dwarf_Call_Frame_Info): Define.
	* maps/dwarf.map (frame): New entry.

2020-08-31  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-anal.c (pkl_anal_ps_program): New handler.
	(pkl_phase_anal1): Install handler.
	(pkl_phase_anal2): Likewise.
	(pkl_phase_analf): Likewise.
	(pkl_anal1_pr_type_struct): Break phase if compiled.

2020-08-31  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/dwarf.pk (Dwarf_Section_Offset): New method `value'.
	(Dwarf_Type_Unit_Header): Define.
	(Dwarf_CIE): Likewise.
	* maps/dwarf.map: New file.
	* maps/elf.map: Move dwarf entries to dwarf.map.
	* maps/Makefile.am (dist_maps_DATA): Add dwarf.map.

2020-08-30  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/dwarf.pk: Add more constants.

2020-08-30  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/future/dwarf.pk: Remove.
	* pickles/dwarf.pk: Copied and adapted from future/dwarf.pk.
	* maps/elf.map: Add debug_info.

2020-08-27  Jose E. Marchesi  <jemarch@gnu.org>

	* gui/poke-gui.c: Include locale.h, for setlocale.

2020-08-27  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/leb128.pk: Simplify pretty printing.

2020-08-26  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/bpf.pk (BPF_Insn_Opcode.class): Turn into method.
	(BPF_Insn_Opcode.imm64): Likewise.

2020-08-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-anal.c (pkl_anal1_ps_type_struct): Allow methods
	anywhere in union types.  Declarations are still only allowed
	before alternatives.
	* libpoke/pkl-gen.pks (struct_mapper): Support methods in union
	types.
	(struct_constructor): Likewise.
	* testsuite/poke.pkl/scons-union-method-1.pk: New test.
	* testsuite/poke.pkl/scons-union-method-2.pk: Likewise
	* testsuite/poke.pkl/scons-union-method-3.pk: Likewise.